Clean up code, add input variable (temporary)